infra/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chinaski-service
spec:
  selector:
    app: chinaski
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
