infra/gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chinaski-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
