infra/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chinaski
  namespace: default
spec:
  gateways:
  - chinaski-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: chinaski-service
        port:
          number: 8080
